@@ -31,4 +31,6 @@ int unittests_run( void );
 int unittests_assert_8k_page( libspectrum_word base, int source, int page );
 int unittests_assert_16k_ram_page( libspectrum_word base, int page );
 
+int unittests_paging_test_48( int ram8000 );
+
 #endif				/* #ifndef FUSE_UNITTESTS_H */
